CVS HEAD:
 * updated translation:
   * russian
 * fixed missing Deathblade in multiplayer

Version 0.8.8:
 * campaign server stores size of campaigns
 * user interface improvements:
   * consistently compute minimum allowed zoom value according to screen size
   * improved readability of chat messages on light backgrounds (#10900)
 * made it possible to move and attack with a single click
 * graphics improvements: 
   * portraits for all TRoW characters that speak in more than one scenario added
   * a portrait for Queen Asheviere in HttT
   * hotseat and vs AI multiplayer icons
   * new or modified unit images: orcish warlord, soul shooter, bone shooter
   * preparations for mountain and desert village graphics
   * new attack icons: bone arrow stab, cleaver, morning star, crush
 * scenario fixes for 'Eastern Invasion' campaign:
   * Weldyn Under Attack (#11051)
   * Capture
   * fixed end of campaign settings
 * scenario fixes for 'Son of the Black Eye' campaign:
   * Saving Inarix
 * scenario fixes for 'The Rise of Wesnoth' campaign:
   * The Vanguard, fixed chest placement
   * make the chests squeak
 * scenario fixes and balancing for 'Heir to the Throne' campaign:
   * A Test of the Clans
   * Return to Wesnoth
 * unit balancing: 
   * Goblin Pillager: reduced HP
   * Goblin Impaler: reduced HP
   * Gryphon Rider: reduced cost
   * Drake Clasher: reduced cost, increase resistance to pierce
   * Drake Gladiator: reduced cost, increase resistance to pierce
   * Drake Slasher: reduced cost, increase resistance to pierce
   * Drake Burner: increase cost
   * Elvish Scout: increased ranged damage, reduced defence in forest
   * Elvish Rider: reduced defence in forest
   * Elvish Outrider: reduced defence in forest
   * Soul Shooter: melee changed from impact to pierce
   * Bone Shooter: melee changed from impact to pierce
   * Mage: reduced cost
   * minor adjustments to Drakefoot & Drakefly (& the Drakes in general)
   * LESS_NIMBLE_ELF macro