@@ -13,22 +13,59 @@ name=Default
 width=1024
 height=768
 
+	[screen]
+	id=screen
+	rect=0,0,1024,768
+	[/screen]
+
+	[panel]
+	id=top-panel
+	image=misc/top-bg.png
+	ref=screen
+	rect==,=,=,+26
+	xanchor=top
+	yanchor=fixed
+	[/panel]
+
 	[main_map]
-	rect=0,26,882,768
+	rect==,+0,882,768
 	xanchor=left
 	yanchor=top
 	[/main_map]
+
+	# rightside panel
+	[panel]
+	id=top-right-panel
+	image=misc/rightside.png
+	rect=+0,=-1,1024,+284
+	xanchor=right
+	yanchor=fixed
+	[/panel]
+	[panel]
+	image=misc/rightside-bg.png
+	rect==,+0,=,+421
+	xanchor=right
+	yanchor=top
+	[/panel]
+	[panel]
+	image=misc/rightside-bottom.png
+	rect==,+0,=,768
+	xanchor=right
+	yanchor=bottom
+	[/panel]
 
 	[menu]
 	title= _ "Menu"
 	image=lite
 	items=objectives,statistics,unitlist,separator,statustable,save,load,preferences,chatlog,help,quit
-	rect=3,1,+100,+21
+	ref=top-panel
+	rect==+3,=+1,+100,=-4
 	xanchor=fixed
 	yanchor=fixed
 	[/menu]
 
 	[menu]
+	id=actions-menu
 	title= _ "Actions"
 	image=lite
 	items=undo,redo,cycle,speak,recruit,recall,showenemymoves,bestenemymoves,delayshroud,updateshroud,endturn
@@ -41,39 +78,12 @@ height=768
 	is_context_menu=true
 	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
 	[/menu]
-
-	# top panel
-	[panel]
-	image=misc/top-bg.png
-	rect=0,0,1024,26
-	xanchor=top
-	yanchor=fixed
-	[/panel]
-
-	# rightside panel
-	[panel]
-	image=misc/rightside.png
-	rect=882,25,1024,309
-	xanchor=right
-	yanchor=fixed
-	[/panel]
 	[mini_map]
+	ref=top-right-panel
 	rect==+10,=+7,=-7,175
 	xanchor=right
 	yanchor=fixed
 	[/mini_map]
-	[panel]
-	image=misc/rightside-bg.png
-	rect=882,309,1024,730
-	xanchor=right
-	yanchor=top
-	[/panel]
-	[panel]
-	image=misc/rightside-bottom.png
-	rect==,730,0,768
-	xanchor=right
-	yanchor=bottom
-	[/panel]
 
 	[menu]
 	title= _ "End Turn"
@@ -84,36 +94,43 @@ height=768
 	[/menu]
 
 	[panel]
+	id=turn-panel
 	image=misc/status-bg.png
-	rect=210,2,+95,+19
+	ref=actions-menu
+	rect=+5,=+1,+95,+19
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
+	id=gold-panel
 	image=misc/status-bg.png
 	rect=+5,=,+95,=
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
+	id=villages-panel
 	image=misc/status-bg.png
 	rect=+5,=,+85,=
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
+	id=units-panel
 	image=misc/status-bg.png
 	rect=+5,=,+85,=
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
+	id=upkeep-panel
 	image=misc/status-bg.png
 	rect=+5,=,+85,=
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
+	id=income-panel
 	image=misc/status-bg.png
 	rect=+5,=,+85,=
 	xanchor=proportional
@@ -136,43 +153,48 @@ height=768
 	yanchor=fixed
 	[/label]
 
-	# gold icon
 	[label]
+	id=gold-icon
 	icon=misc/gold.png
 	text= _ "gold"
-	rect=315,3,+16,+16
+	ref=gold-panel
+	rect==+5,=+1,+16,+16
 	xanchor=proportional
 	yanchor=fixed
 	[/label]
-	# villages icon
 	[label]
+	id=villages-icon
 	icon=misc/villages.png
 	text= _ "villages"
-	rect=415,3,+16,+16
+	ref=villages-panel
+	rect==+5,=+1,+16,+16
 	xanchor=proportional
 	yanchor=fixed
 	[/label]
-	# units icon
 	[label]
+	id=units-icon
 	icon=misc/units.png
 	text= _ "units"
-	rect=505,3,+16,+16
+	ref=units-panel
+	rect==+5,=+1,+16,+16
 	xanchor=proportional
 	yanchor=fixed
 	[/label]
-	# upkeep icon
 	[label]
+	id=upkeep-icon
 	icon=misc/upkeep.png
 	text= _ "upkeep"
-	rect=595,3,+32,+16
+	ref=upkeep-panel
+	rect==+5,=+1,+32,+16
 	xanchor=proportional
 	yanchor=fixed
 	[/label]
-	# income icon
 	[label]
+	id=income-icon
 	icon=misc/income.png
 	text= _ "income"
-	rect=685,3,+32,+16
+	ref=income-panel
+	rect==+5,=+1,+32,+16
 	xanchor=proportional
 	yanchor=fixed
 	[/label]
@@ -185,16 +207,10 @@ height=768
 		yanchor=fixed
 		[/time_of_day]
 
-		[observers]
-		font_size=12
-		rect=1004,3,+16,+16
-		xanchor=proportional
-		yanchor=fixed
-		[/observers]
-
 		#put the side playing indicator next to the turn indicator
 		[side_playing]
-		rect=213,4,+15,+16
+		ref=turn-panel
+		rect==+3,=+2,+15,+16
 		xanchor=proportional
 		yanchor=fixed
 		[/side_playing]
@@ -202,7 +218,7 @@ height=768
 		# the game status
 		[turn]
 		font_size=12
-		rect=232,4,+68,+16
+		rect=+4,=,+68,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -210,7 +226,8 @@ height=768
 		[/turn]
 		[gold]
 		font_size=12
-		rect=335,4,+65,+16
+		ref=gold-icon
+		rect=+4,=,+65,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -218,7 +235,8 @@ height=768
 		[/gold]
 		[villages]
 		font_size=12
-		rect=435,4,+55,+16
+		ref=villages-icon
+		rect=+4,=,+55,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -226,7 +244,8 @@ height=768
 		[/villages]
 		[num_units]
 		font_size=12
-		rect=525,4,+55,+16
+		ref=units-icon
+		rect=+4,=,+55,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -234,7 +253,8 @@ height=768
 		[/num_units]
 		[upkeep]
 		font_size=12
-		rect=630,4,+40,+16
+		ref=upkeep-icon
+		rect=+4,=,+40,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -242,7 +262,8 @@ height=768
 		[/upkeep]
 		[income]
 		font_size=12
-		rect=720,4,+40,+16
+		ref=income-icon
+		rect=+4,=,+40,+16
 		xanchor=proportional
 		yanchor=fixed
 		prefix=
@@ -250,16 +271,25 @@ height=768
 		[/income]
 		[terrain]
 		font_size=12
-		rect=770,4,+120,+16
+		rect=+5,=,+120,+16
 		xanchor=proportional
 		yanchor=fixed
 		[/terrain]
 		[position]
+		id=position-text
 		font_size=12
-		rect=895,4,+105,+16
+		rect=+5,=,+105,+16
 		xanchor=proportional
 		yanchor=fixed
 		[/position]
+
+		[observers]
+		font_size=12
+		ref=position-text
+		rect=+4,=-1,+16,+16
+		xanchor=proportional
+		yanchor=fixed
+		[/observers]
 
 		#unit stats here
 		[unit_image]
@@ -343,17 +373,49 @@ height=768
 		yanchor=fixed
 		[/unit_weapons]
 	[/status]
+
+	[dummy]
+		id=dummy2
+	[/dummy]
 [/resolution]
 
 [resolution]
 width=800
 height=600
 
+	# top panel
+	[panel]
+	image=misc/top-bg.png
+	rect=0,0,1024,26
+	xanchor=top
+	yanchor=fixed
+	[/panel]
+
 	[main_map]
 	rect=0,26,882,768
 	xanchor=left
 	yanchor=top
 	[/main_map]
+
+	# rightside panel
+	[panel]
+	image=misc/rightside.png
+	rect=882,25,1024,309
+	xanchor=right
+	yanchor=fixed
+	[/panel]
+	[panel]
+	image=misc/rightside-bg.png
+	rect=882,309,1024,730
+	xanchor=right
+	yanchor=top
+	[/panel]
+	[panel]
+	image=misc/rightside-bottom.png
+	rect=882,730,0,768
+	xanchor=right
+	yanchor=bottom
+	[/panel]
 
 	[menu]
 	title= _ "Menu"
@@ -377,39 +439,11 @@ height=600
 	is_context_menu=true
 	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
 	[/menu]
-
-	# top panel
-	[panel]
-	image=misc/top-bg.png
-	rect=0,0,1024,26
-	xanchor=top
-	yanchor=fixed
-	[/panel]
-
-	# rightside panel
-	[panel]
-	image=misc/rightside.png
-	rect=882,25,1024,309
-	xanchor=right
-	yanchor=fixed
-	[/panel]
 	[mini_map]
 	rect=892,32,1017,175
 	xanchor=right
 	yanchor=fixed
 	[/mini_map]
-	[panel]
-	image=misc/rightside-bg.png
-	rect=882,309,1024,730
-	xanchor=right
-	yanchor=top
-	[/panel]
-	[panel]
-	image=misc/rightside-bottom.png
-	rect=882,730,0,768
-	xanchor=right
-	yanchor=bottom
-	[/panel]
 
 	[menu]
 	title= _ "End Turn"
@@ -687,11 +721,41 @@ height=600
 width=320
 height=240
 
+	# top panel
+	[panel]
+	image=misc/top-bg.png
+	rect=0,0,1024,13
+	xanchor=top
+	yanchor=fixed
+	[/panel]
+
 	[main_map]
 	rect=0,13,946,768
 	xanchor=left
 	yanchor=top
 	[/main_map]
+
+	# rightside panel
+	[panel]
+	image=misc/rightside.png
+	rect=946,25,1024,150
+	xanchor=right
+	yanchor=fixed
+	[/panel]
+	[panel]
+	image=misc/rightside-bg.png
+	rect=946,150,1024,768
+	xanchor=right
+	yanchor=top
+	[/panel]
+[comment]
+	[panel]
+	image=misc/rightside-bottom.png
+	rect=946,752,0,768
+	xanchor=right
+	yanchor=bottom
+	[/panel]
+[/comment]
 
 	[menu]
 	title= _ "Menu"
@@ -716,41 +780,11 @@ height=240
 	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
 	[/menu]
 
-	# top panel
-	[panel]
-	image=misc/top-bg.png
-	rect=0,0,1024,13
-	xanchor=top
-	yanchor=fixed
-	[/panel]
-
-	# rightside panel
-	[panel]
-	image=misc/rightside.png
-	rect=946,25,1024,150
-	xanchor=right
-	yanchor=fixed
-	[/panel]
 	[mini_map]
 	rect=951,28,1020,92
 	xanchor=right
 	yanchor=fixed
 	[/mini_map]
-
-	[panel]
-	image=misc/rightside-bg.png
-	rect=946,150,1024,768
-	xanchor=right
-	yanchor=top
-	[/panel]
-[comment]
-	[panel]
-	image=misc/rightside-bottom.png
-	rect=946,752,0,768
-	xanchor=right
-	yanchor=bottom
-	[/panel]
-[/comment]
 
 	[menu]
 	title= _ "End Turn"
