@@ -1,4 +1,5 @@
 CVS HEAD:
+ * added support for specifying a reference rectangle when using relative-positionning syntax in themes
  * updated translation:
    * russian
  * fixed missing Deathblade in multiplayer
